correct email _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: 🚀 Tracy Sambu's Coding Odyssey
 author: Tracy Sambu
 description: Explore the universe of my GitHub skills, projects, and coding adventures. 🌌✨
 
-email: tracysambut@example.com
+email: tracysambut@gmail.com
 github_username: sambutracy
 linkedin_username: tracy sambu
 
